--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "0.5.11",
   "description": "",
   "keywords": [],
-  "files": [
-    "lib",
-    "dist"
-  ],
+  "files": ["lib"],
   "main": "lib/es2018/index.js",
   "types": "lib/es2018/index.d.ts",
   "sideEffects": false,
@@ -18,10 +15,8 @@
     "test": "jest --runInBand --config jest.config.js",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "test:coverage": "jest --coverage --config jest.config.js",
-    "prepublishOnly": "run-s clean build bundle",
-    "clean": "run-p clean:*",
-    "clean:build": "rimraf lib",
-    "clean:bundle": "rimraf dist",
+    "prepublishOnly": "run-s clean build",
+    "clean": "rimraf lib",
     "build": "run-p build:*",
     "build:es2015": "run-s build:es2015:*",
     "build:es2015:compile": "tsc --project tsconfig.build.json --module commonjs --target es2015 --outDir lib/es2015",
@@ -29,7 +24,6 @@
     "build:es2018": "run-s build:es2018:*",
     "build:es2018:compile": "tsc --project tsconfig.build.json --module commonjs --target es2018 --outDir lib/es2018",
     "build:es2018:patch": "tscpaths -p tsconfig.build.json -s ./src -o ./lib/es2018",
-    "bundle": "rollup --config rollup.config.js",
     "release": "standard-version"
   },
   "husky": {
@@ -42,11 +36,6 @@
     "@blackglory/jest-matchers": "^0.5.0",
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
-    "@rollup/plugin-commonjs": "^22.0.2",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-replace": "^4.0.0",
-    "@rollup/plugin-typescript": "^8.4.0",
     "@types/jest": "^29.2.2",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
@@ -56,9 +45,6 @@
     "npm-run-all": "^4.1.5",
     "return-style": "^1.0.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.78.1",
-    "rollup-plugin-analyzer": "^4.0.0",
-    "rollup-plugin-terser": "^7.0.2",
     "standard-version": "^9.5.0",
     "ts-jest": "^29.0.3",
     "tscpaths": "^0.0.9",
