--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "structure-of-arrays",
-  "version": "0.5.11",
+  "version": "0.5.12",
   "description": "",
   "keywords": [],
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "main": "lib/es2018/index.js",
   "types": "lib/es2018/index.d.ts",
   "sideEffects": false,
