--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "repository": "git@github.com:BlackGlory/structure-of-arrays.git",
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
   "license": "MIT",
+  "engines": {
+    "node": ">=16"
+  },
   "scripts": {
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src __tests__",
     "test": "jest --runInBand --config jest.config.js",
@@ -35,12 +38,12 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.2.0",
-    "@commitlint/config-conventional": "^17.2.0",
-    "@types/jest": "^29.2.2",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
-    "eslint": "^8.27.0",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
+    "@types/jest": "^29.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "eslint": "^8.30.0",
     "husky": "^4.3.8",
     "jest": "^29.3.1",
     "npm-run-all": "^4.1.5",
@@ -53,9 +56,9 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@blackglory/prelude": "^0.1.8",
-    "@blackglory/structures": "^0.11.4",
-    "iterable-operator": "^2.3.0",
-    "justypes": "^3.0.0"
+    "@blackglory/prelude": "^0.2.0",
+    "@blackglory/structures": "^0.12.0",
+    "iterable-operator": "^3.1.0",
+    "justypes": "^4.0.0"
   }
 }
