--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "files": [
     "lib"
   ],
-  "main": "lib/es2018/index.js",
-  "types": "lib/es2018/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "sideEffects": false,
   "repository": "git@github.com:BlackGlory/structure-of-arrays.git",
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
@@ -23,13 +23,9 @@
     "test:coverage": "jest --coverage --config jest.config.js",
     "prepublishOnly": "run-s clean build",
     "clean": "rimraf lib",
-    "build": "run-p build:*",
-    "build:es2015": "run-s build:es2015:*",
-    "build:es2015:compile": "tsc --project tsconfig.build.json --module commonjs --target es2015 --outDir lib/es2015",
-    "build:es2015:patch": "tscpaths -p tsconfig.build.json -s ./src -o ./lib/es2015",
-    "build:es2018": "run-s build:es2018:*",
-    "build:es2018:compile": "tsc --project tsconfig.build.json --module commonjs --target es2018 --outDir lib/es2018",
-    "build:es2018:patch": "tscpaths -p tsconfig.build.json -s ./src -o ./lib/es2018",
+    "build": "run-s build:*",
+    "build:compile": "tsc --project tsconfig.build.json --module commonjs --target es2018 --outDir lib",
+    "build:patch": "tscpaths -p tsconfig.build.json -s ./src -o ./lib",
     "bench": "ts-node --require tsconfig-paths/register benches/index.ts",
     "release": "standard-version"
   },
