--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "build:compile": "tsc --project tsconfig.build.json --module commonjs --target es2018 --outDir lib",
     "build:patch": "tscpaths -p tsconfig.build.json -s ./src -o ./lib",
     "bench": "ts-node --require tsconfig-paths/register benches/index.ts",
+    "bench:debug": "cross-env NODE_OPTIONS=--inspect-brk ts-node --require tsconfig-paths/register benches/index.ts",
     "release": "standard-version"
   },
   "husky": {
@@ -41,6 +42,7 @@
     "@types/jest": "^29.2.4",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.30.0",
     "extra-benchmark": "^0.2.2",
     "husky": "^4.3.8",
