--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "files": [
     "lib"
   ],
+  "type": "module",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "sideEffects": false,
@@ -16,53 +17,56 @@
     "node": ">=16"
   },
   "scripts": {
+    "prepare": "ts-patch install -s",
     "deduplicate": "yarn-deduplicate",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src __tests__",
-    "test": "jest --runInBand --config jest.config.js",
-    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
-    "test:coverage": "jest --coverage --config jest.config.js",
-    "prepublishOnly": "run-s clean build",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --runInBand --config jest.config.cjs",
+    "test:debug": "cross-env NODE_OPTIONS=--experimental-vm-modules node --inspect-brk node_modules/.bin/jest --runInBand --config jest.config.cjs",
+    "test:coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage --config jest.config.cjs",
+    "prepublishOnly": "run-s prepare clean build",
     "clean": "rimraf lib",
-    "build": "run-s build:*",
-    "build:compile": "tsc --project tsconfig.build.json --module commonjs --target es2018 --outDir lib",
-    "build:patch": "tscpaths -p tsconfig.build.json -s ./src -o ./lib",
+    "build": "tsc --project tsconfig.build.json",
     "bench": "ts-node --require tsconfig-paths/register benches/index.ts",
     "bench:debug": "cross-env NODE_OPTIONS=--inspect-brk ts-node --require tsconfig-paths/register benches/index.ts",
     "release": "standard-version"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "run-s lint build test",
+      "pre-commit": "run-s prepare lint build test",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.3.0",
-    "@commitlint/config-conventional": "^17.3.0",
-    "@types/jest": "^29.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
+    "@blackglory/jest-resolver": "^0.3.0",
+    "@commitlint/cli": "^17.5.1",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@types/jest": "^29.5.0",
+    "@types/node": "16",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.30.0",
+    "eslint": "^8.37.0",
     "extra-benchmark": "^0.2.2",
     "husky": "^4.3.8",
-    "jest": "^29.3.1",
+    "jest": "^29.5.0",
+    "jest-resolve": "^29.5.0",
     "npm-run-all": "^4.1.5",
-    "return-style": "^1.0.0",
+    "return-style": "^3.0.0",
     "rimraf": "^3.0.2",
     "standard-version": "^9.5.0",
-    "ts-jest": "^29.0.3",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.1",
-    "tscpaths": "^0.0.9",
-    "tslib": "^2.4.1",
+    "ts-patch": "^2.1.0",
+    "tsconfig-paths": "^4.2.0",
+    "tslib": "^2.5.0",
     "typescript": "^4.8.4",
+    "typescript-transform-paths": "^3.4.6",
     "yarn-deduplicate": "^6.0.1"
   },
   "dependencies": {
-    "@blackglory/prelude": "^0.2.0",
-    "@blackglory/structures": "^0.12.2",
-    "iterable-operator": "^3.1.0",
-    "justypes": "^4.0.0"
+    "@blackglory/prelude": "^0.3.1",
+    "@blackglory/structures": "^0.13.3",
+    "iterable-operator": "^4.0.5",
+    "justypes": "^4.2.0"
   }
 }
