chore: upgrade dependencies
BREAKING CHANGE: Node.js v16 => Node.js v18.17

--- a/package.json
+++ b/package.json
@@ -15,20 +15,17 @@
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
   "license": "MIT",
   "engines": {
-    "node": ">=16"
+    "node": ">=18.17.0"
   },
   "scripts": {
     "prepare": "ts-patch install -s",
     "deduplicate": "yarn-deduplicate",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src __tests__",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --runInBand --config jest.config.cjs",
-    "test:debug": "cross-env NODE_OPTIONS=--experimental-vm-modules node --inspect-brk node_modules/.bin/jest --runInBand --config jest.config.cjs",
-    "test:coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage --config jest.config.cjs",
     "prepublishOnly": "run-s prepare clean build",
     "clean": "rimraf lib",
     "build": "tsc --project tsconfig.build.json",
-    "bench": "ts-node --esm --require tsconfig-paths/register benches/index.ts",
-    "bench:debug": "cross-env NODE_OPTIONS=--inspect-brk ts-node --esm --require tsconfig-paths/register benches/index.ts",
+    "bench": "tsx benches/index.ts",
     "release": "standard-version"
   },
   "husky": {
@@ -38,36 +35,35 @@
     }
   },
   "devDependencies": {
-    "@blackglory/jest-resolver": "^0.3.0",
-    "@commitlint/cli": "^17.5.1",
-    "@commitlint/config-conventional": "^17.4.4",
-    "@types/jest": "^29.5.0",
+    "@blackglory/jest-resolver": "^0.3.1",
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "16",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.37.0",
-    "extra-benchmark": "^0.2.2",
+    "eslint": "^8.56.0",
+    "extra-benchmark": "^0.2.3",
     "husky": "^4.3.8",
-    "jest": "^29.5.0",
-    "jest-resolve": "^29.5.0",
+    "jest": "^29.7.0",
+    "jest-resolve": "^29.7.0",
     "npm-run-all": "^4.1.5",
-    "return-style": "^3.0.0",
-    "rimraf": "^3.0.2",
+    "return-style": "^3.0.1",
+    "rimraf": "^5.0.5",
     "standard-version": "^9.5.0",
-    "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1",
-    "ts-patch": "^2.1.0",
-    "tsconfig-paths": "^4.2.0",
-    "tslib": "^2.5.0",
-    "typescript": "^4.8.4",
+    "ts-jest": "^29.1.2",
+    "ts-patch": "^3.1.2",
+    "tslib": "^2.6.2",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3",
     "typescript-transform-paths": "^3.4.6",
-    "yarn-deduplicate": "^6.0.1"
+    "yarn-deduplicate": "^6.0.2"
   },
   "dependencies": {
-    "@blackglory/prelude": "^0.3.1",
-    "@blackglory/structures": "^0.13.3",
-    "iterable-operator": "^4.0.5",
-    "justypes": "^4.2.0"
+    "@blackglory/prelude": "^0.3.4",
+    "@blackglory/structures": "^0.13.4",
+    "iterable-operator": "^5.0.0",
+    "justypes": "^4.2.1"
   }
 }
